--- a/.github/workflows/pasv.yml
+++ b/.github/workflows/pasv.yml
@@ -19,3 +19,22 @@ jobs:
 
       - name: Push image
         run: docker push ghcr.io/${GITHUB_REPOSITORY}:${GITHUB_REF_NAME}
+  Lint:
+          runs-on: ubuntu-latest
+          needs: [ Build ]
+          steps:
+            - name: Check out Git repository
+              uses: actions/checkout@v2
+
+            - name: Set up Node.js
+              uses: actions/setup-node@v1
+              with:
+                node-version: 12
+
+            - name: Install Node.js dependencies
+              run: npm install eslint
+
+            - name: Run linters
+              uses: wearerequired/lint-action@v1
+              with:
+                eslint: true
